--- a/source/part1/1.md
+++ b/source/part1/1.md
@@ -10,5 +10,9 @@
 
 ##荣誉法则：
 ###1 不要抄袭其他同学的代码，或者已经出过的正确答案，这样就毁了学习这门课的意义。
-###2 网上抄袭＝没有学
+###2 网上抄袭＝没有学。不是欺骗他人，而是欺骗自己。
+
+## 重点关注－作业要求：
+### mini project下对应assignment的具体要求。
+
 
